--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <main>
-        <h1>Иванов Иван Иванович</h1> <!-- ФИО -->
-        <h2>2101</h2> <!-- Номер группы-->
-        <h3>о</h3> <!-- тут должно быть или о, или д -->
+        <h1>Павлов Петр Михайлович</h1>
+        <h2>2104</h2>
+        <h3>о</h3>
     </main>
 </body>
 </html>
